crates/products/wt/client/src/shell/snapshots/wt__shell__render__tests__shell_control_help.snap
---
source: crates/products/wt/client/src/shell/render_tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 64, height: 16 },
    content: [
        "    │                  No live Codex sessions                   ",
        "  󰚩 │┌ Help ───────────────────────────────────────────────────┐",
        "    ││                                                         │",
        "    ││  Shortcut              Action                           │",
        "   ││  Tab                   Next activity                    │",
        "    ││  Arrows / wheel        Select card                      │",
        "    ││  Enter / click         Open selected card               │",
        "▌ 󰆍 ││  1 / F1                Open command palette             │",
        "    ││  2 / F2                Toggle help                      │",
        "    ││  F5                    Open active world                │",
        "    ││  F6                    Close WT                         │",
        "    ││                                                         │",
        "    ││  Esc: close                                             │",
        "    ││                                                         │",
        "    │└─────────────────────────────────────────────────────────┘",
        "    │Live sessions · Experimental              [ Help (2 / F2) ]",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 61, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 47, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
    ]
}
