crates/products/wt/client/src/shell/snapshots/wt__shell__render__tests__shell_control_live_sessions.snap
---
source: crates/products/wt/client/src/shell/render_tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 18 },
    content: [
        "┌Live sessions · Experimental──────────────────────────────────────────────────────────────────────┐",
        "│     ┌ 󰔟 WORKING · 0s ago · ars.dev · wt/live ────┐                                               │",
        "│     │world output                                │                                               │",
        "│     │red                                         │                                               │",
        "│     │                                            │                                               │",
        "│     │                                            │                                               │",
        "│     │                                            │                                               │",
        "│     │                                            │                                               │",
        "│     │                                            │                                               │",
        "│     │                                            │                                               │",
        "│     │                                            │                                               │",
        "│     │                                            │                                               │",
        "│     │                                            │                                               │",
        "│     │                                            │                                               │",
        "│     └────────────────────────────────────────────┘                                               │",
        "│                                                                                                  │",
        "│                                                                                                  │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 47, y: 1, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 3, fg: Indexed(1), bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 5, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 5, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 11, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 11, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
