crates/products/wt/client/src/shell/snapshots/wt__shell__render__tests__shell_control_placeholder.snap
---
source: crates/products/wt/client/src/shell/render.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 6 },
    content: [
        "world ou┌──────────────────────────────┐        ",
        "red     │          CONTORL UI          │        ",
        "        │                              │        ",
        "        │           F5 close           │        ",
        "        └──────────────────────────────┘        ",
        "                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 0, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 40, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Indexed(1), bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 40, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 40, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 40, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 40, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
