crates/products/wt/client/src/shell/snapshots/wt__shell__render__tests__shell_control_world_cards.snap
---
source: crates/products/wt/client/src/shell/render_tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 25 },
    content: [
        "    │┌ 󰐊 RUNNING ──────────────────────────────────┐ ┌ 󰅚 ERROR ────────────────────────────────────┐",
        "  󰚩 ││ars.dev                                      │ │lab.broken                                   │",
        "    ││4 CPU · 8G · 12.3G/64G disk                  │ │2 CPU · 4G · 8G/32G disk                     │",
        "    ││2 wt-tools reports; run `wt reports`         │ │host preparation failed; run `wt rm          │",
        "▌  ││Checkout wt · wt/world-card-sessions         │ │lab.broken`                                  │",
        "    ││  Codex session 123e4567 · WORKING · 0s ago  │ │                                             │",
        "    ││                                             │ │                                             │",
        "  󰆍 ││                                             │ │                                             │",
        "    ││Enter or click to open                       │ │Enter or click to open                       │",
        "    │└─────────────────────────────────────────────┘ └─────────────────────────────────────────────┘",
        "    │                                                                                               ",
        "    │                                                                                               ",
        "    │                                                                                               ",
        "    │                                                                                               ",
        "    │                                                                                               ",
        "    │                                                                                               ",
        "    │                                                                                               ",
        "    │                                                                                               ",
        "    │                                                                                               ",
        "    │                                                                                               ",
        "    │                                                                                               ",
        "    │                                                                                               ",
        "    │                                                                                               ",
        "    │                                                                                               ",
        "    │Worlds · Last updated 2026-08-21T23:26:52Z                                    [ Help (2 / F2) ]",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 0, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 63, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 1, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 2, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 3, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 3, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 4, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 4, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 5, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 14, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 5, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 6, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 6, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 7, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 7, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 8, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 51, y: 8, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 99, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 9, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 83, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
    ]
}
