crates/products/wt/client/src/shell/snapshots/wt__shell__render__tests__shell_switcher_over_world.snap
---
source: crates/products/wt/client/src/shell/render.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 6 },
    content: [
        "world output       ┌────────────────────────────────────────┐                   ",
        "red                │    ←/→ worlds   ↑ control   F5 close   │                   ",
        "                   └────────────────────────────────────────┘                   ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 0, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 61, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Indexed(1), bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 61, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 2, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 61, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
