crates/products/wt/client/src/shell/snapshots/wt__shell__render__tests__shell_switcher_world_bar.snap
---
source: crates/products/wt/client/src/shell/render.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 6 },
    content: [
        "  WT            local.one (1/2)   ←/→ worlds   ↑ control   F5   F6 quit        ",
        "world output                                                                    ",
        "red                                                                             ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Black, bg: Cyan, underline: Reset, modifier: BOLD,
        x: 8, y: 0, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Indexed(1), bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
