crates/products/wt/client/src/shell/snapshots/wt__shell__render__tests__shell_test_server_control_warning.snap
---
source: crates/products/wt/client/src/shell/render_tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 12 },
    content: [
        "    │┌Live sessions · Experimental────────────────────────── WT E2E TEST SERVER ",
        "  󰚩 ││                         No live Codex sessions                          │",
        "    ││               Start Codex in a world to see its pane here               │",
        "    ││                                                                         │",
        "   ││                                                                         │",
        "    ││                                                                         │",
        "    ││                                                                         │",
        "▌ 󰆍 ││                                                                         │",
        "    ││                                                                         │",
        "    ││                                                                         │",
        "    │└─────────────────────────────────────────────────────────────────────────┘",
        "    │[ arrows or wheel: select ] [ Enter/click: open ] [ Tab: activity ] [ F5: w",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | REVERSED,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
