crates/products/wt/client/src/shell/snapshots/wt__shell__render__tests__snapshots_the_complete_live_dashboard.snap
---
source: crates/products/wt/client/src/shell/render.rs
expression: "rendered_control(&model, 128, 20)"
---
    │┌ 󰔟 CHANGING · ars.clever-turtle · window “codex” ──────────┐┌ 󰅚 CONTEXT ERROR ──────────────────────────────────────────┐
▌ 󰆍 ││$ cargo test -p wt-client                                  ││                   context data rejected                   │
    ││running 107 tests                                          ││                                                           │
    ││test shell::world_card::tests ... ok                       ││                                                           │
   ││test result: ok. 107 passed; 0 failed                      ││                                                           │
    ││                                                           ││                                                           │
    ││                                                           ││                                                           │
    ││                                                           ││                                                           │
    ││                                                           ││                                                           │
    ││                                                           ││                                                           │
    ││                                                           ││                                                           │
    ││                                                           ││                                                           │
    ││                                                           ││                                                           │
    ││                                                           ││                                                           │
    ││                                                           ││                                                           │
    ││                                                           ││                                                           │
    ││                                                           ││                                                           │
    │└─────────────────── /home/wt/wt · wt/world-card-action-log ┘└───────────────────────────────────────────────────────────┘
    │
    │Live Codex screens · Last updated 2026-08-28T10:26:08Z              CPU 6/20 · RAM 12G/32G · Disk 96G/238G[ Help (2 / F2) ]
